Add h1 title only for screen reader

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <main>
+            <h1 class="sr-only">Article preview component</h1>
             <article class="card">
                 <img
                     src="./assets/images/drawers.jpg"
